--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,8 @@
 html, body {
 	height: 100%;
 	margin: 0px;
+	font-family: 'Rubik';
+	overflow: hidden;
 }
 
 p {
@@ -11,27 +13,27 @@ p {
 
 #header {
 	height: 15%;
-	min-height: 100px;
 }
 
 #left-header {
 	height: 100%;
-	width: 18%;
+	width: 25%;
 	float: left;
 	color: #383838;
 	font-weight: 400;
 }
 
 #right-header {
-	background-color: blue;
 	height: 100%;
-	width: 82%;
+	width: 75%;
 	float: right;
 }
 
 #header-container {
 	position: relative;
 	top: 40%;
+	left: 20%;
+	width: 80%;
 	height: 60%;
 }
 
@@ -39,6 +41,9 @@ p {
 	display: block;
 	text-align: center;
 	font-size: 2em;
+	top: 15%;
+	height: 50%;
+	position: relative;
 	width: 80%;
 	margin: auto;
 }
@@ -47,18 +52,77 @@ p {
 	display: block;
 	margin: auto;
 	text-align: center;
+	position: relative;
+	top: 15%;
 	letter-spacing: 2px;
 	opacity: 0.8;
 	width: 80%;
 }
 
+#menu {
+	position: relative;
+	margin: 0;
+	padding: 0;
+	float: right;
+	top: 40%;
+	right: 8%;
+	width: 40%;
+	height: 60%;
+}
+
+#menu li {
+	display: inline-block;
+	margin: 0 0 0 80px;
+	font-size: 1em;
+	position: relative;
+	top: 65%;
+}
+
+#menu a {
+	opacity: 0.8;
+	color: #383838;
+}
+
+#menu li:hover {
+	cursor: pointer;
+	opacity: 1;
+	border-bottom: solid 2px;
+}
+
 /*---BODY---*/
 
 #body {
-	background-color: red;
-	min-height: 77%;
+	height: 77%;
 }
 
+#ul-body {
+	width: 25%;
+	height: 10%;
+	display: inline-block;
+	float: left;
+}
+
+#ur-body {
+	width: 75%;
+	height: 10%;
+	display: inline-block;
+	float: right;
+}
+
+#ml-body {
+	width: 25%;
+	height: 90%;
+	display: inline-block;
+	float: left;
+	clear: both;
+}
+
+#mr-body {
+	width: 75%;
+	height: 90%;
+	display: inline-block;
+	float: right;
+}
 
 
 /*---FOOTER---*/
@@ -72,4 +136,48 @@ p {
 	width: 100%;
 	display: inline-block;
 	clear: both;
+}
+
+#footer div {
+	margin-left: 8%;
+}
+
+
+
+/*---DEBUG---*/
+
+#left-header {
+	background-color: yellow;
+}
+
+#right-header {
+	background-color: purple;
+}
+
+#header-container {
+	background-color: orange;
+}
+
+#menu {
+	background-color: orange;
+}
+
+#body {
+	background-color: red;
+}
+
+#ul-body {
+	background-color: blue;
+}
+
+#ur-body {
+	background-color: green;
+}
+
+#ml-body {
+	background-color: orange;
+}
+
+#mr-body {
+	background-color: red;
 }
